--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           </div>
           <div class="meal-body">
             <h4>Szechuan Beef</h4>
-            <button>
-              <i class="far fa-heart"></i>
+            <button class="fav-btn active">
+              <i class="fas fa-heart"></i>
             </button>
           </div>
         </div>
