--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
         <ul class="fav-meals">
           <li>
             <img
-              src="https://www.themealdb.com/images/ingredients/Chicken.png"
+              src="https://www.themealdb.com/images/media/meals/wuxrtu1483564410.jpg"
               alt=""
-            /><span>Chicken</span>
+            /><span>Dal fry</span>
           </li>
           <li>
             <img
-              src="https://www.themealdb.com/images/ingredients/Beef.png"
+              src="https://www.themealdb.com/images/media/meals/wxswxy1511452625.jpg"
               alt=""
-            /><span>Beef</span>
+            /><span>Squash linguine</span>
           </li>
           <li>
             <img
-              src="https://www.themealdb.com/images/ingredients/Pork.png"
+              src="https://www.themealdb.com/images/media/meals/x2fw9e1560460636.jpg"
               alt=""
-            /><span>Pork</span>
+            /><span>Leblebi Soup</span>
           </li>
         </ul>
       </div>
