removed favorite list

--- a/index.html
+++ b/index.html
@@ -36,25 +36,8 @@
       </header>
       <div class="fav-container">
         <h3>Favorite Meals</h3>
-        <ul class="fav-meals">
-          <li>
-            <img
-              src="https://www.themealdb.com/images/media/meals/wuxrtu1483564410.jpg"
-              alt=""
-            /><span>Dal fry</span>
-          </li>
-          <li>
-            <img
-              src="https://www.themealdb.com/images/media/meals/wxswxy1511452625.jpg"
-              alt=""
-            /><span>Squash linguine</span>
-          </li>
-          <li>
-            <img
-              src="https://www.themealdb.com/images/media/meals/x2fw9e1560460636.jpg"
-              alt=""
-            /><span>Leblebi Soup</span>
-          </li>
+        <ul class="fav-meals" id="fav-meals">
+          
         </ul>
       </div>
       <div class="meals" id="meals"></div>
