--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <div class="mobile-container">
       <header>
-        <input type="text" name="" id="" />
+        <input type="text" name="" id="search-term" />
         <button id="search"><i class="fas fa-search"></i></button>
       </header>
       <div class="fav-container">
