--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       src="https://kit.fontawesome.com/3fa41704cb.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- JavaScript -->
     <script src="scripts.js" defer></script>
   </head>
   <body>
@@ -36,11 +38,21 @@
       </header>
       <div class="fav-container">
         <h3>Favorite Meals</h3>
-        <ul class="fav-meals" id="fav-meals">
-          
-        </ul>
+        <ul class="fav-meals" id="fav-meals"></ul>
       </div>
       <div class="meals" id="meals"></div>
+    </div>
+
+    <div class="popup-container" id="meal-popup">
+      <div class="popup">
+        <button id="close-popup" class="close-popup">
+          <i class="fas fa-times"></i>
+        </button>
+
+        <div class="meal-info" id="meal-info">
+       
+        </div>
+      </div>
     </div>
   </body>
 </html>
