added cursor pointer to close popup

--- a/index.html
+++ b/index.html
@@ -43,15 +43,12 @@
       <div class="meals" id="meals"></div>
     </div>
 
-    <div class="popup-container" id="meal-popup">
+    <div class="popup-container hidden" id="meal-popup">
       <div class="popup">
         <button id="close-popup" class="close-popup">
           <i class="fas fa-times"></i>
         </button>
-
-        <div class="meal-info" id="meal-info">
-       
-        </div>
+        <div class="meal-info" id="meal-info"></div>
       </div>
     </div>
   </body>
